--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Renae Meines | UI Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,600,700" rel="stylesheet">
   </head>
   <body>
     <noscript>
@@ -15,5 +15,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.min.js"></script>
+    <script src="/js/objloader.js"></script>
+    <script src="/js/mtlloader.js"></script>
+    <script src="/js/orbit.js"></script>
+    <script src="/three-script.js"></script> -->
   </body>
 </html>
