threejs WIP, adding contact section

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.min.js"></script>
     <script src="/js/objloader.js"></script>
     <script src="/js/mtlloader.js"></script>
     <script src="/js/orbit.js"></script>
-    <script src="/three-script.js"></script> -->
+    <script src="/three-script.js"></script>
   </body>
 </html>
